# svrog

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  00-notes  CMakeLists.txt  CMakePresets.json  demo.qrc  main.cpp  main.qml  vulkandemorenderer.cpp  vulkandemorenderer.h  vulkanrenderer.h  vulkanviewport.cpp  vulkanviewport.h
cmake/: FileUtils.cmake  SlangShaders.cmake
src/: CMakeLists.txt  main.cpp
src/bridge/: CMakeLists.txt  ivulkanrenderer.h  qml_initializer.h  render_engine.cpp  render_engine.h  vulkandemorenderer.cpp  vulkandemorenderer.h
src/cmake/: SlangShaders.cmake
src/glfw_debug/: CMakeLists.txt  glfw_initializer.h  main.cpp  visual_app.cpp  visual_app.h  vk_visual_app.cpp  vk_visual_app.h
src/glfw_debug/presentation/: surface_builder.cpp  surface_builder.h  swapchain_builder.cpp  swapchain_builder.h  swapchain_pipeline_config_builder.h  swapchain_render_target.cpp  swapchain_render_target.h
src/logging/: CMakeLists.txt  colored_logger.cpp  colored_logger.h
src/renderer/: CMakeLists.txt  CMakePresets.json  instance.cpp  instance.h  vk_builder.cpp  vk_builder.h  vk_ctx.cpp  vk_ctx.h  vk_initializer.cpp  vk_initializer.h
src/renderer/common/: vk_common.h
src/renderer/shaders/: shader_utils.cpp  shader_utils.h  triangle_shaders.h
src/renderer/visual_debug/: CMakeLists.txt  main.cpp  vk_visual_app.cpp  vk_visual_app.h
src/renderer/vk_ctx/: vk_builder.cpp  vk_builder.h  vk_ctx.cpp  vk_ctx.h  vk_initializer.cpp  vk_initializer.h
src/renderer/vk_ctx/builders/: command_builder.cpp  debug_instance_builder.cpp  debug_instance_builder.h  device_builder.cpp  device_builder.h  device_builder.inl  framebuffer_builder.cpp  i_vk_builder.h  instance_builder.cpp  instance_builder.h  pipeline_builder.cpp  pipeline_builder.h  render_pass_builder.cpp  surface_builder.cpp  swapchain_builder.cpp  swapchain_builder.h  sync_builder.cpp  sync_builder.h
src/renderer/vk_ctx/utils/: vk_image_utils.cpp
src/rendering/: CMakeLists.txt
src/rendering/common/: vk_common.h
src/rendering/core/builders/: builder_chain.h  command_builder.cpp  command_builder.h  debug_instance_builder.cpp  debug_instance_builder.h  device_builder.cpp  device_builder.h  device_builder.inl  external_memory_device_builder.cpp  external_memory_device_builder.h  i_vk_builder.h  instance_builder.cpp  instance_builder.h  physical_device_match_builder.cpp  physical_device_match_builder.h  pipeline_builder.cpp  pipeline_builder.h  present_device_builder.cpp  present_device_builder.h  sync_builder.cpp  sync_builder.h
src/rendering/core/builders/legacy/: framebuffer_builder.cpp  framebuffer_builder.h  render_pass_builder.cpp  render_pass_builder.h
src/rendering/core/context/: ctx.h
src/rendering/core/initialization/: build_type_initializer.h  core_builders.h  core_initializer.cpp  core_initializer.h  debug_initializer_mixin.h
src/rendering/core/memory/: memory_manager.cpp  memory_manager.h
src/rendering/core/renderer/: renderer.cpp  renderer.h
src/rendering/presentation/: frame_resources.cpp  frame_resources.h  i_render_target.h  offscreen_render_target.cpp  offscreen_render_target.h
src/rendering/primitives/: mesh.h  push_constants.h  texture_image.cpp  texture_image.h  uniform_buffer_object.h  vertex.h
src/rendering/shaders/: shader_utils.cpp  shader_utils.h  triangle_shader.slang
src/rendering/utils/: image_utils.cpp  image_utils.h  shader_utils.cpp  shader_utils.h
src/rendering/vk_ctx/: vk_builder.h  vk_initializer.cpp
src/rendering/vk_ctx/builders/: command_builder.h  debug_instance_builder.h  framebuffer_builder.h  instance_builder.h  pipeline_builder.h  render_pass_builder.h  surface_builder.cpp  surface_builder.h  swapchain_builder.h  sync_builder.cpp
src/shaders/: triangle_shader.slang
src/ui/MainWindow/: CMakeLists.txt  Main.qml
src/ui/VulkanViewport/: CMakeLists.txt  vulkanviewport.cpp  vulkanviewport.h
src/utils/: CMakeLists.txt  file_utils.cpp  file_utils.h
